# MBA-VO

./: CMakeLists.txt  README.MD  README.md
src/: CMakeLists.txt
src/ba_tracker/: CMakeLists.txt  blur_aware_direct_tracker.cpp  blur_aware_direct_tracker.h  compute_hessian_gradients_cost.cu  compute_hessian_gradients_cost.h  compute_hessian_gradients_cost_fast.cu  compute_local_patches_xy.cu  compute_local_patches_xy.h  compute_pixel_intensity.h  compute_virtual_camera_poses.cu  compute_virtual_camera_poses.h  generate_synthetic_data.cpp  generate_synthetic_data.h  levenberg_marquardt_strategy.cpp  levenberg_marquardt_strategy.h  merge_hessian_gradient_cost.cpp  merge_hessian_gradient_cost.h  reduction.h  solve_normal_equation.h  spline_update_step.cpp  spline_update_step.h  trust_region_step_evaluator.cpp  trust_region_step_evaluator.h
src/core/: CMakeLists.txt
src/core/common/: CudaAtomics.h  CudaDefs.h  CustomType.h  Enums.h  EpipolarGeometry.h  Linalg.h  Matches.h  Matrix.h  Quaternion.h  RadToDeg.h  Random.h  SmallBlas.h  SmallBlasGeneric.h  Spline.h  SplineFunctor.h  Statistics.h  Time.h  Vector.h
src/core/cuda/: cuda_arithmetic.cu  cuda_arithmetic.cuh  cuda_arithmetic.h  cuda_reduction.h
src/core/feature_detectors/: FeatureDetectorBase.cpp  FeatureDetectorBase.h  FeatureDetectorSemiDense.cpp  FeatureDetectorSemiDense.h  FeatureDetectorSparse.cpp  FeatureDetectorSparse.h
src/core/image_proc/: Gradient.h  Undistort.cpp  Undistort.h
src/core/kd_tree/: KDTree.cpp  KDTree.h
src/core/measurements/: Frame.cpp  Frame.h  Image.h  ImagePyramid.h  ImuMeasurement.h
src/core/sensors/: CameraBase.cpp  CameraBase.h  CameraPinhole.cpp  CameraPinhole.h  CameraPinholeCuda.h  CameraUnified.cpp  CameraUnified.h  DistortionRadTan.cpp  DistortionRadTan.h  Imu.cpp  Imu.h  ImuParams.h  NSensorSystem.cpp  NSensorSystem.h  SensorBase.cpp  SensorBase.h
src/core/states/: MapSparse.cpp  MapSparse.h  NavState.cpp  NavState.h  Point3dBase.cpp  Point3dBase.h  Point3dDynamic.cpp  Point3dDynamic.h  Point3dStatic.cpp  Point3dStatic.h  Transformation.cpp  Transformation.h
src/utils/: CMakeLists.txt  ColorMapJet.cpp  ColorMapJet.h  Geometry.cpp  Geometry.h  ImShow.h  ImageFolderReader.h  InputOutput.cpp  InputOutput.h  IsClose.h  ScalarToColorMap.h  SplineTrajectory.cpp  SplineTrajectory.h
test/: CMakeLists.txt  test_blur_aware_tracker_modules.cpp
test/data/: blur_aware_tracker_configs_eth3d.json  blur_aware_tracker_configs_fpga_left.json  blur_aware_tracker_configs_fpga_right.json  blur_aware_tracker_configs_tum_freiburg1.json  blur_aware_tracker_configs_tum_freiburg2.json  blur_aware_tracker_configs_unreal.json  control_knots.txt  patch_pattern_9x9.txt
test/data/stereo/: calib.txt
test/data/tracker/: 2.depth  3.depth  intrinsics.calib
test/impl/: cuda_kernels.cu
